--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,13 @@
 .App {
   text-align: center;
 
+
 }
 
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title{
+  font-weight: bold;
+		color: #069;
+    font-family: 'Roboto';
 }
 
 
@@ -50,7 +21,7 @@
 #nav ol {
 	float: right; }
 
-#nav ol a {
+#nav ol {
 		display: block;
 		padding: 8px 15px;
 		text-decoration: none;
@@ -65,3 +36,4 @@
 		font-weight: bold;
 		color: #069;
 		border-right: 1px solid #ccc; }
+
