--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,10 @@
 		color: #069;
 		border-right: 1px solid #ccc; }
 
+
+	
+.background{
+	background-image: url('./images/background.png');
+	background-repeat: no-repeat;
+	height: 400px
+}
