--- a/src/App.css
+++ b/src/App.css
@@ -6,37 +6,15 @@
 
 .title{
   font-weight: bold;
-		color: #069;
-    font-family: 'Roboto';
+		color: #93168F;
+    font-family: 'Alfa Slab One';
+	font-size: 50px ;
 
 }
 
-
-#nav {
-  text-align: right;
-	width: 100%;
-	float: left;
-	margin: 0 0 3em 0;
-	padding: 0;
-	list-style: none; }
-#nav ol {
-	float: right; }
-
-#nav ol {
-		display: block;
-		padding: 8px 15px;
-		text-decoration: none;
-		font-weight: bold;
-		color: #069;
-		border-right: 1px solid #ccc; }
-
-#nav ol a {
-		display: block;
-		padding: 8px 15px;
-		text-decoration: none;
-		font-weight: bold;
-		color: #069;
-		border-right: 1px solid #ccc; }
+.ChangeColor{
+	color:#32140E
+}
 
 
 	
@@ -44,28 +22,49 @@
 	background-image: url('./images/background.png');
 	background-repeat: no-repeat;
 	height: 400px;
+	margin: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 75%;
+	padding: 5px;
 
 
-	
 }
 
 .search-bar{
-	text-align: center;
 	
-	border: 0.2em solid #E59DAC;
-    border-radius: 0.5em;
+	
+	border: 0.1em solid #AF9DAE;
+    border-radius: .75em;
 
     width: 100%;
-    height: 100%;
+    height: 50px;
 
-	background-color: #E59DD0;
-    opacity: 2;
-
+	background-color: #AF9DAE;
+    
     font-weight: bold;
-    color: #035E7B;
-
+    color: #93168F;
 }
 
 .listing{
 	border-style: groove;
+	border-radius: .75em;
+	opacity: 1;
+}
+
+.trip-bar{
+	box-sizing: border-box;
+	padding: 5px;
+	border: 2px solid #eee;
+	border-radius:7px;
+	margin: 10px;
+}
+
+.trip-element{
+	margin-left: 10px;
+	box-sizing: border-box;
+	padding: 5px;
+	border: 2px solid #eee;
+	border-radius:7px;
 }
