--- a/src/App.css
+++ b/src/App.css
@@ -23,25 +23,29 @@
 	background-repeat: no-repeat;
 	height: 400px;
 	margin: auto;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 75%;
+	
+	
+	width: 100%;
 	padding: 5px;
 
-
+	background-attachment: fixed;
+	background-position: center; 
 }
+.background-color{
+	background-color: #AF9DAE;
 
+	padding: 20px;
+}
 .search-bar{
 	
-	
+	align-items: 'center';
 	border: 0.1em solid #AF9DAE;
     border-radius: .75em;
 
     width: 100%;
     height: 50px;
 
-	background-color: #AF9DAE;
+
     
     font-weight: bold;
     color: #93168F;
@@ -49,8 +53,24 @@
 
 .listing{
 	border-style: groove;
-	border-radius: .75em;
+	border-radius: 0em;
 	opacity: 1;
+	margin: 10px;
+	border: 2px solid #93168F;
+	
+}
+
+img {
+	
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+  }
+
+.listing-image{
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center; 
 }
 
 .trip-bar{
